Table users as U {
  ~auto_big_id

  name varchar

  ~timestamps
}

Table user_sleeps as S {
  ~auto_big_id

  user_id bigint [ref: > U.id, not null] // many-to-one

  start_time datetime [not null, default: `now()`]
  end_time datetime
  duration int [default: 0, note: 'In seconds']

  ~timestamps

  Indexes {
    (user_id, start_time, duration)
    user_id
  }
}

Table follows as F {
  ~auto_big_id

  follower_id bigint [ref: > U.id, not null]
  followed_id bigint [ref: > U.id, not null]

  ~timestamps

  Indexes {
    follower_id
    followed_id
    (follower_id, followed_id) [unique]
  }
}

TablePartial timestamps {
  created_at datetime [not null, default: `now()`]
  updated_at datetime [not null, default: `now()`]
}

TablePartial auto_big_id {
  id bigint [pk, increment] // auto-increment
}
